--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="estilos.css">
 	</head>
-<body>
-	<h1>Controlde versiones</h1>
-	<h2>Lopez Podesta Macarena</h2>
-</body>
+	<body>
+		<h1>Controlde versiones</h1>
+		<h2>Lopez Podesta Macarena</h2>
+		<h3>Pipliza Nadia</h3>
+	</body>
 </html>
